--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,24 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "nodemon server.js",
-    "server": "nodemon index.js --ignore client"
+    "watch": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "^3.3.0",
     "bcrypt": "^4.0.1",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
+    "apollo-server-express": "^2.19.0",
+    "graphql": "^15.5.1",
+    "express": "^4.17.1",
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
-  }
+  },
+  "description": ""
 }
