--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^5.1.0"
+   "@apollo/client": "^3.4.7",
+   "graphql": "^15.5.1",
+   "concurrently": "^5.1.0"
   }
 }
 
